# windows-screen-agent

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-06-windows-screen-agent-mvp.md  2026-06-07-tray-status-menu.md  2026-06-10-offline-ollama-planner.md  2026-06-10-tray-answer-mode.md
docs/superpowers/specs/: 2026-06-06-windows-screen-agent-design.md
samples/: README.md  sample_form.html
src/windows_screen_agent/: __init__.py  actions.py  answer_mode.py  app.py  autostart.py  codex_agent.py  config.py  demo.py  doctor.py  hotkey.py  logs.py  ollama_agent.py  openai_agent.py  planners.py  prompt.py  routing.py  runner.py  screen.py  settings.py  tray.py
tests/: test_actions.py  test_answer_mode.py  test_autostart.py  test_codex_agent.py  test_config_logs.py  test_doctor.py  test_hotkey.py  test_imports.py  test_ollama_agent.py  test_openai_agent.py  test_prompt.py  test_routing.py  test_runner.py  test_sample_commands.py  test_samples.py  test_screen_prompt.py  test_settings.py  test_tray_hotkeys.py  test_tray_status.py
